Tue Jan 25 15:17:58 UTC 2011  Steve Huston  <shuston@riverace.com>

        * bin/MakeProjectCreator/config/acemfcexe.mpb: The SubSystem value
          for "Windows" on VC10 is "Windows", not "2" as it is for VC8-9.

Mon Feb 28 20:29:59 UTC 2011  Steve Huston  <shuston@riverace.com>

        * examples/ASX/Event_Server/Event_Server/Event_Analyzer.cpp:
        * examples/ASX/UPIPE_Event_Server/Event_Analyzer.cpp: Replaced the
          name "mod_name" with "module_name" to avoid a clash with macro
          defined in /usr/include/sys/stropts.h encountered when optimized
          build was done.

Mon Feb 28 18:10:19 UTC 2011  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix_ibm.GNU: Remove the -qfuncsect
          option from CCFLAGS; it caused an occasional odd problem and the
          only reason it was added (Jul 17 2002) was to try and remove
          duplicate symbol diagnostics from template instantiations.
          Thanks to Phil Mesnier for raising this issue and identifying
          the fix.

Mon Feb 21 16:19:49 EST 2011  Steve Huston  <shuston@riverace.com>

	* ACE version 6.0a released.

Tue Feb  1 14:28:18 UTC 2011  Steve Huston  <shuston@riverace.com>

        * ace/String_Base.cpp (operator+=): Add a temporary for the return
          value to quiet an IBM XL C++ 10 optimizer warning about returning
          the address of a temporary. No, I'm not kidding.

Wed Jan 26 20:17:28 UTC 2011  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix_ibm.GNU: If XL C/C++ 10.1 is used,
          use the same compiler options as for XL C/C++ 9.

Fri Jan 21 17:04:29 UTC 2011  Steve Huston  <shuston@riverace.com>

        * ace/config-hpux-11.00.h: Set ACE_LACKS_(STR|WCS)TO[U]LL when
          the requisite long-long compiler settings are missing. Enables
          use of these functions when they're available.

        * m4/ace_func.m4: Remove the parts of ACE_FUNC_WCSTOLL and